tests/sources/invalid/syntax/syntax_comprehensive.fire
// Comprehensive syntax error tests
// These should all produce parser/lexer errors

// Missing semicolons
a: int32 = 5
b: int32 = 10;  //~ ERROR FS-PARSE-0010 @1

// Unclosed parenthesis
x: int32 = (5 + 3;  //~ ERROR FS-PARSE-0010 @18

// Unclosed array literal
arr: int32[] = [1, 2, 3;  //~ ERROR FS-PARSE-0010 @24
//~^ ERROR FS-PARSE-0010 @24

// Missing condition parentheses in if
if x > 5 {  //~ ERROR FS-PARSE-0010 @4
    println("test");  //~ ERROR FS-PARSE-0012 @5
}

// Missing condition in while
while {  //~ ERROR FS-PARSE-0010 @7
    println("test");  //~ ERROR FS-PARSE-0012 @5
}

// Invalid tokens
@#$%  //~ ERROR FS-PARSE-0010 @2
//~^ ERROR FS-PARSE-0012 @2

// Missing block braces
if (true)
    y: int32 = 5;

// Unclosed string literal
s: string = "hello;

// Invalid array type syntax
bad_arr: int32[ = 5;

// Dangling else
else {
    println("orphan else");  //~ ERROR FS-PARSE-0010 @14
}

// Missing function body
fn test() -> void;

// Invalid function syntax - missing parens
fn badFunc {
    println("test");
}

// Missing closing brace
fn unclosed() -> void {  //~ ERROR FS-PARSE-0010 @23
    z: int32 = 10;
